<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NNMusicDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_music">Musica</string>
    <string name="button_artist">Artista</string>
    <string name="title">NN Music Droid</string>
    <string name="button_map">Mapa</string>
    <string name="button_country">Países</string>
    <string name="button_about">Sobre</string>
    <string name="title_activity_music_activity">music_activity</string>
    <string name="title_activity_music">music</string>
    <string name="button_addCountry">Adicionar País</string>
    <string name="title_activity_countries">countries</string>
    <string name="title_activity_artists">artists</string>
    <string name="title_activity_country_list">countryList</string>
    <string name="my_countries">Meus Países</string>
    <string name="title_activity_map">map</string>
    <string name="title_activity_artist_list">ArtistListActivity</string>
    <string name="title_activity_music_list">MusicListActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="top_Tracks">Top de musicas</string>
    <string name="top_Artists">Top de Artistas</string>
    <string name="lista_vazia">Vazia</string>
    <string name="country">country</string>
    <string name="artist_title">Artista</string>
    <string name="details">Detalhes</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="developers">developers</string>
    <string name="nuno">Nuno Nunes</string>
    <string name="miguel">Luis Neiva</string>
    <string name="description">Descrição</string>
    <string name="description1">Aplicação que mostra os TOPs de Músicas ou de Artistas do País
        selecionado pelo utilizador, contém ainda uma mapa que mostra um marker com os TOPs dos
        países que o utilizador tem nos "Meus Países". </string>
    <string name="image">Imagem</string>
    <string name="title_activity_music_details">music_details</string>
    <string name="music_title">musica</string>
    <string name="album_name">Nome Album --> </string>
    <string name="name_artist">Nome Artista --> </string>
    <string name="music_duration">Duração --> </string>
    <string name="music_url">music_url</string>
    <string name="music_summary">Sumário:</string>
    <string name="album_name1">album_name1</string>
    <string name="name_artist1">name_artist1</string>
    <string name="music_duration1">music_duration1</string>
    <string name="music_summary1">music_summary1</string>
    <string name="artist_url">artist_url</string>
    <string name="artist_sumario">Sumário:</string>
    <string name="artist_sumario1">artist_summary1</string>
    <string name="all_countries">Países</string>
    <string name="title_activity_top5_musics_artists">Top5MusicsArtists</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_preferences">PreferencesActivity</string>

</resources>
