<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0000A0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000A0"
        android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dip"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/button_Music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_music"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1.0"

                    />
                <Button
                    android:id="@+id/button_Artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_artist"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1.0"

                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
                <Button
                    android:id="@+id/button_Map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_map"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1.0"

                    />
                <Button
                    android:id="@+id/button_Country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_country"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1.0"

                    />

                <Button
                    android:id="@+id/button_About"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_about"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1.0"

                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logotipo"/>


    </LinearLayout>

</LinearLayout>