<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0000A0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dip"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            android:text="@string/country"
            />


        <TextView
            android:id="@+id/text_my_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/top_Artists"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <!-- - Lição 03, ficheiro: 6_listas_2013_10_11 -->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:id="@android:id/list" />
        <TextView
            android:id="@id/emptynn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lista_vazia"/>

    </LinearLayout>

</LinearLayout>
